--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -9,7 +11,8 @@ body {
   background: #000 url('Images/background.jpg') no-repeat center center/cover;
   height: 100vh;
   color: #fff;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Poppins',
+    sans-serif;
 }
 
 a {
@@ -92,6 +95,7 @@ input[type='text'] {
   width: 100%;
   height: 300px;
   object-fit: cover;
+  object-position: center;
 }
 
 .card-inner {
@@ -116,7 +120,7 @@ input[type='text'] {
 }
 
 .card-back {
-  background-color: #333;
+  background-color: #15391F;
   color: white;
   padding: 20px;
   transform: rotateY(180deg);
@@ -143,4 +147,37 @@ input[type='text'] {
     height: 300px;
     object-fit: contain;
   }
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 30px;
+}
+
+.pagination li {
+  list-style: none;
+  padding: 5px 10px;
+  cursor: pointer;
+  border: 1px solid #15391F;
+
+}
+
+.pagination li.active {
+  background: #15391F;
+  padding: 10px 15px;
+  border: 1px solid #15391F;
+  animation: all 1s ease-in-out;
+}
+
+.pagination li.active a {
+  color: white !important;
+}
+
+.pagination li a {
+  text-decoration: none;
+  color: #15391F !important;
+  font-size: 14px;
+  text-transform: capitalize;
 }
